--- a/public/scss/_general.scss
+++ b/public/scss/_general.scss
@@ -72,12 +72,54 @@ a {
     }
 }
 
-.list-table{
+.block-heading {
+    margin: 0 0 20px 0;
+}
+
+.block {
+    padding: 20px;
+}
+
+.browse-items {
     list-style: none;
     margin: 0 0 20px 0;
     padding: 0;
-    .list-item{
+    position: relative;
+    border-top: 1px solid #EEE;
+
+    .item {
         display: flex;
+        padding: 0 10px;
+        border-bottom: 1px solid #EEE;
+        height: 35px;
+        line-height: 35px;
+        cursor: pointer;
+        position: relative;
+        .item__user-avatar {
+            display: inline-block;
+            width: 25px;
+            height: 25px;
+            vertical-align: middle;
+            border-radius: 50%;
+            margin: 5px 10px 0 0;
+            background: #DDD;
+            text-align: center;
+            line-height: 25px;
+            color: #FFF;
+        }
+        &.active {
+            &:before {
+                background: #92f3ff;
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 0;
+                opacity: 0.1;
+            }
+        }
     }
 }
 
