--- a/public/scss/todo.scss
+++ b/public/scss/todo.scss
@@ -87,8 +87,10 @@
     }
 }
 
-#todo-list {
+#todo-list,
+#todo-users{
     flex: 1 1 0;
+    overflow: auto;
 }
 
 #todo-groups {
@@ -110,7 +112,6 @@
     }
     .browse-items {
         list-style: none;
-        margin: 0;
         padding: 0;
         border-top: 1px solid #EEE;
         .item {
@@ -251,5 +252,25 @@
     .todo__item-desc {
         width: 100%;
         height: 100px;
+    }
+}
+
+.browse-item-users {
+    .search-users {
+        [name="add-user"] {
+            width: 200px;
+            vertical-align: middle;
+        }
+    }
+}
+.todo-post-comment{
+    textarea{
+        height:100px;
+    }
+}
+
+.assignee{
+    .assignee__user{
+
     }
 }
